--- a/coding/index.html
+++ b/coding/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <h1>Js programme</h1>
 </head>
 <body>
-    <script src="./currying/1st.js"></script>
+    <h1>Understanding JS</h1>
+    <button id="clickMe">Click me</button>
+    <script src="callBack.js"></script>
 </body>
 </html>
