--- a/promise/1st.html
+++ b/promise/1st.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Understanding Promise</h1>
-    <script src="promAll.js"></script>
+
+   <!-- <script src="promAll.js"></script> -->
+    <script src="1st.js"></script> 
 </body>
 </html>
