--- a/sorting/tree/index1.html
+++ b/sorting/tree/index1.html
@@ -1,16 +1,13 @@
-<!-- <!DOCTYPE html> -->
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <h1>Sorting</h1>
+    <title>Binary Search Tree</title>
 </head>
 <body>
-    
-    <!-- <script src="hashTable.js"></script> -->
-    <!-- <script src="quick.js"></script> -->
-    <script src="merge.js"></script>
+    <h1>Binary search Tree</h1>
+    <script src="bstf.js"></script>
 </body>
 </html>
