--- a/promise/1st.html
+++ b/promise/1st.html
@@ -10,6 +10,7 @@
     <h1>Understanding Promise</h1>
 
    <!-- <script src="promAll.js"></script> -->
-    <script src="1st.js"></script> 
+    <!-- <script src="1st.js"></script>  -->
+    <script src="promiseChain.js"></script>
 </body>
 </html>
